--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch>=2.4.0
-torchvision>=0.19.0
+torch>=2.0.1
+torchvision>=0.15.2
 opencv-python>=4.9.0.80
 diffusers>=0.31.0
 transformers>=4.49.0
@@ -11,6 +11,6 @@ easydict
 ftfy
 dashscope
 imageio-ffmpeg
-flash_attn
 gradio>=5.0.0
 numpy>=1.23.5,<2
+runpod
