--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch>=2.0.1
-torchvision>=0.15.2
+torch>=2.1.0,<2.2.0
+torchvision>=0.16.0,<0.17.0
 opencv-python>=4.9.0.80
 diffusers>=0.31.0
 transformers>=4.49.0
